--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@formkit/nuxt": "^0.17.5",
+    "@nuxt/image-edge": "^1.1.0-28346300.6030589",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.4.0",
+    "compression": "^1.7.4",
     "currency.js": "^2.0.4",
     "flatpickr": "^4.6.13",
     "flowbite": "^1.8.1",
@@ -35,7 +37,6 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.30.1",
-    "@nuxt/image-edge": "^1.0.0-27827328.bc9ddc0",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@pinia/nuxt": "^0.4.3",
@@ -46,10 +47,13 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.27.0",
     "eslint-plugin-vue": "^9.7.0",
+    "lasso-less": "^4.0.2",
+    "lasso-marko": "^4.0.0",
     "lodash": "^4.17.21",
     "nuxt": "^3.1.1",
     "nuxt-icon": "^0.1.7",
     "typescript": "^4.8.4",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
